--- a/CaseSuccess.html
+++ b/CaseSuccess.html
@@ -56,13 +56,14 @@
 <body>
 
   <div class="container">
-    <img src="imgs/footerlogo.png" alt="FedEx Logo">
+    <img src="https://gashruti28-del.github.io/Web2caselogo/imgs/footerlogo.png" alt="FedEx Logo">
     <h1>Thank You!</h1>
     <p>Your case has been submitted successfully.  
        Our support team will review it and get back to you shortly.</p>
 
-    <a href="index.html" class="button">Submit Another Case</a>
+    <a href="https://gashruti28-del.github.io/Web2caselogo/index.html" class="button">Submit Another Case</a>
   </div>
 
 </body>
 </html>
+
